<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CarcassonneCounter</string>
    <string name="final_scoring">Final Scoring</string>
    <string name="reset">Reset</string>
    <string name="undo">Undo</string>
    <string name="road">Road</string>
    <string name="cloister">Cloister</string>
    <string name="city_and_shields">City and Shields</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cancel_final_scoring">cancel Final Scoring</string>
    <string name="select">Select</string>
    <string name="next">Next</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="farmer">Farmer</string>
    <string name="popup_road">road (<xliff:g id="multiplier" example="1">%d</xliff:g>x)</string>
    <string name="popup_city">city and shields (<xliff:g id="multiplier" example="1">%d</xliff:g>x)</string>
    <string name="popup_farmer">cities for your farmer(<xliff:g id="multiplier" example="1">%d</xliff:g>x)</string>
    <string name="popup_cloister">cloister (<xliff:g id="multiplier" example="1">%d</xliff:g>x)</string>
    <string name="end_game">End game</string>
    <string name="start_new_game">Start new game</string>
    <string name="winner_pawn">Winner pawn</string>
    <string name="wins">wins with <xliff:g id="score" example="55">%d</xliff:g> points</string>
    <string name="tie">Tie! You have both <xliff:g id="score" example="55">%d</xliff:g> points</string>
    <string name="player_1_select_your_color">Player 1 select your color:</string>
    <string name="player_2_select_color">Player 2 select your color</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="carcassonne">Carcassonne</string>
    <string name="no_undo">There are no steps to undo!</string>
    <string name="less_then_1">You cannot score less then one tile</string>
    <string name="undo_last_step">Undo last scoring step...</string>
</resources>
