<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/outer_padding">

    <ImageView
        android:id="@+id/winner_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/winner_pawn" />

    <TextView
        android:id="@+id/popup_description"
        style="@style/PopupTextStyle"
        android:gravity="center"
        android:text="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/popup_cancel_button"
            style="@style/PopupButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/popup_ok_button"
            style="@style/PopupButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/start_new_game" />
    </LinearLayout>

</LinearLayout>